fix irregular socialicon placement, teams page social icons larger on mobile
some simplification of jsx files using Social Icons, mobile social icons a bit larger

--- a/src/component/HorizontalFooter/style.css
+++ b/src/component/HorizontalFooter/style.css
@@ -78,3 +78,39 @@ a:hover {
     padding-top: 14%;
     padding-bottom: 0;
 }
+
+.social-icons {
+    margin-bottom: 10%;
+}
+
+
+.social-icons .row {
+    flex-wrap: nowrap;
+    text-align: center;
+}
+
+.social-icons .social-media {
+    width: 6vw;
+    height: 4vh;
+}
+
+@media (min-width: 750px) {
+    .social-icons .social-media {
+        width: 3vw;
+        height: 4vh;
+    }
+}
+
+@media (min-width: 1224px) {
+    .social-icons .social-media {
+        width: 2vw;
+        height: 4vh;
+    }
+}
+
+@media only screen and (max-device-width: 700px) {
+    .social-icons-mobile .social-media {
+        width: 10vw;
+        height: 6vh;
+    }
+}
