--- a/src/component/LandingPageV2/ProductDevLifecycle/Ideation/style.css
+++ b/src/component/LandingPageV2/ProductDevLifecycle/Ideation/style.css
@@ -58,7 +58,7 @@ a {
 
   .ideation {
     margin-left: 12.55vh;
-    margin-top: 8%;
+    margin-top: 10vh;
   }
 
   .IdeationText {
@@ -87,7 +87,7 @@ a {
   @media only screen and (max-width: 650px){
     .ideation {
       margin-left: 12.55vh;
-      margin-top: 0%;
+      margin-top: 3vh;
     }
   }
 
